<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Auth.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_signin_height"
                android:src="@drawable/img_signin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/el_margin"
                android:letterSpacing="0.1"
                android:text="@string/txt_welcome_back"
                android:textAlignment="center"
                android:textColor="@color/blue_signal"
                android:textSize="@dimen/txt_welcome_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/el_margin"
                android:letterSpacing="0.1"
                android:text="@string/txt_sign_in_to_continue"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_standard_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/el_margin"
                android:padding="@dimen/el_padding"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/el_margin_input"
                    android:background="@drawable/input_field"
                    android:hint="@string/edt_e_mail_adress"
                    android:padding="@dimen/el_padding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_standard_size" />

                <EditText
                    android:id="@+id/edt_passowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/el_margin_input"
                    android:background="@drawable/input_field"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/el_padding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_standard_size" />

                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/el_margin_input"
                    android:background="@drawable/btn_shape"
                    android:padding="@dimen/el_padding"
                    android:text="@string/txt_sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <ProgressBar
                android:layout_margin="@dimen/el_margin_input"
                android:id="@+id/prog_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/cpb" />
            <TextView
                android:id="@+id/txt_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_forget_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/el_margin"
                    android:text="@string/txt_dont_have_account"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/txt_createOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/el_margin"
                    android:text="@string/txt_create_one"
                    android:textColor="@color/blue_signal" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>