<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Auth.SignUpFragment">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/img_signup_height"
                android:src="@drawable/img_signup"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_signal"
                android:textSize="@dimen/txt_welcome_size"
                android:textStyle="bold"
                android:text="@string/txt_glad_to_have_you_here"
                android:textAlignment="center"
                android:letterSpacing="0.1"/>
            <TextView
                android:layout_margin="@dimen/el_margin"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_standard_size"
                android:letterSpacing="0.1"
                android:text="@string/txt_create_account_to_start_chatting"/>
            <LinearLayout
                android:layout_margin="@dimen/el_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <FrameLayout
                    android:id="@+id/frl_user_image"
                    android:layout_margin="@dimen/el_margin"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/el_margin">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imgv_profile"
                        android:layout_width="@dimen/img_widht"
                        android:layout_height="@dimen/img_height"
                        android:background="@drawable/background_image_profil"
                        android:scaleType="centerCrop"
                        app:riv_oval="true"/>
                    <TextView
                        android:id="@+id/txt_add_photo"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:text="@string/txt_add_photo"
                        android:textSize="@dimen/el_margin"/>

                </FrameLayout>

                <EditText
                    android:id="@+id/edt_fullname"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:textSize="@dimen/txt_standard_size"
                    android:textColor="@color/black"
                    android:hint="@string/edt_full_name"/>
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:textSize="@dimen/txt_standard_size"
                    android:textColor="@color/black"
                    android:hint="@string/edt_e_mail_adress"/>
                <EditText
                    android:id="@+id/edt_date_of_birth"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:textSize="@dimen/txt_standard_size"
                    android:textColor="@color/black"
                    android:inputType="date"
                    android:hint="@string/edt_date_of_birth"/>
                <LinearLayout
                    android:layout_margin="@dimen/el_margin_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/input_field">
                    <com.hbb20.CountryCodePicker
                        android:padding="@dimen/el_margin_input"
                        android:id="@+id/countryCode_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:ccp_defaultPhoneCode="216"/>
                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:padding="@dimen/el_padding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_field_phone_number"
                        android:hint="@string/edt_phone_number"
                        android:textSize="@dimen/txt_standard_size"
                        android:inputType="phone"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/edt_passowrd"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:textSize="@dimen/txt_standard_size"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:hint="@string/edt_password"/>
                <EditText
                    android:id="@+id/edt_confirmpassowrd"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_field"
                    android:textSize="@dimen/txt_standard_size"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:hint="Confirm Password"/>
                <TextView
                    android:id="@+id/txt_signup"
                    android:layout_margin="@dimen/el_margin_input"
                    android:padding="@dimen/el_padding"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:background="@drawable/btn_shape"/>
            </LinearLayout>

            <ProgressBar
                android:layout_margin="@dimen/el_margin_input"
                android:id="@+id/prog_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:indeterminateDrawable="@drawable/cpb"/>
            <TextView
                android:textStyle="bold"
                android:layout_margin="@dimen/el_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_by_registring_you_confirm_thatyou_accept_our"
                android:textColor="@color/black"/>
            <TextView
                android:layout_margin="@dimen/el_margin"
                android:textStyle="bold"
                android:id="@+id/txt_createOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms of Use and Privacy Policy"
                android:textColor="@color/blue_signal"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>